# virtuoso-audio

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  fuzz.yml
assets/hrir/: ASSET_MANIFEST.json
assets/legal/: LICENSE  PRIVACY_POLICY.md  THIRD_PARTY_LICENSES.md
cmake/: CPM.cmake  CodeSigning.cmake  Dependencies.cmake  SBOM.cmake
docs/: BUILD.md
docs/ADR/: ADR-001-Virtual-Device-Track.md  ADR-002-Licensing.md  ADR-003-Convolution-Precision.md  ADR-004-Crypto-Backend.md
drivers/linux/: virtuoso-pipewire-sink.sh
drivers/macos/: Info.plist  README.md  VirtuosoAudioServerPlugin.cpp
drivers/windows/: README.md  VirtuosoVAD.cpp  VirtuosoVAD.inf  VirtuosoVAD_Miniport.cpp  VirtuosoWaveRTStream.cpp
installer/macos/: VirtuosoAudio.entitlements  build-pkg.sh  distribution.xml
installer/windows/: VirtuosoSetup.nsi
scripts/: setup-linux-sink.sh
src/: Main.cpp  StandaloneApp.cpp  StandaloneApp.h
src/audio/: AudioCommandQueue.cpp  AudioCommandQueue.h  AudioEngine.cpp  AudioEngine.h  BassManagement.cpp  BassManagement.h  ChannelLayoutMapper.cpp  ChannelLayoutMapper.h  ConvolverProcessor.cpp  ConvolverProcessor.h  DeviceWatchdog.cpp  DeviceWatchdog.h  EqProcessor.cpp  EqProcessor.h  LimiterProcessor.cpp  LimiterProcessor.h  ResamplerProcessor.cpp  ResamplerProcessor.h  UpmixProcessor.cpp  UpmixProcessor.h  VirtualDeviceCapture.cpp  VirtualDeviceCapture.h
src/audio/platform/: CoreAudioCapture.cpp  CoreAudioCapture.h  PipeWireCapture.cpp  PipeWireCapture.h  WasapiCapture.cpp  WasapiCapture.h
src/export/: ExportProgressModel.cpp  ExportProgressModel.h  OfflineRenderer.cpp  OfflineRenderer.h
src/gui/: FirstRunWizard.cpp  FirstRunWizard.h  LookAndFeel.cpp  LookAndFeel.h  MainWindow.cpp  MainWindow.h  SystemTray.cpp  SystemTray.h
src/gui/components/: AboutPanel.cpp  AboutPanel.h  HrirCarousel.cpp  HrirCarousel.h  LatencyMonitor.cpp  LatencyMonitor.h  MasterToggle.cpp  MasterToggle.h
src/hrir/: HeSuViImporter.cpp  HeSuViImporter.h  HrirManager.cpp  HrirManager.h  HrirParserWorker.cpp  HrirParserWorker.h  HrirResampler.cpp  HrirResampler.h  HrirValidator.cpp  HrirValidator.h  SofaHrirParser.cpp  SofaHrirParser.h  WavHrirParser.cpp  WavHrirParser.h
src/logging/: Logger.cpp  Logger.h  SupportBundle.cpp  SupportBundle.h
src/profile/: ProfileEncryption.cpp  ProfileEncryption.h  ProfileManager.cpp  ProfileManager.h  ProfileSchema.h
src/safety/: DriverHealthCheck.cpp  DriverHealthCheck.h  RepairTool.cpp  RepairTool.h  TransactionJournal.cpp  TransactionJournal.h
src/util/: Crypto.cpp  Crypto.h  PlatformDetect.h  ProfileEncryption.h  ProfileManager.cpp  ProfileManager.h  ProfileSchema.cpp  ProfileSchema.h  SingleInstance.cpp  SingleInstance.h
tests/: CMakeLists.txt
tests/fuzz/: FuzzSofaParser.cpp  FuzzWavParser.cpp
tests/integration/: OfflineParityTest.cpp  ParserSubprocessTest.cpp
tests/perf/: ConvolverBenchmark.cpp  LatencyHarness.cpp
tests/unit/: ConvolverProcessorTest.cpp  CryptoBackendTest.cpp  TransactionJournalTest.cpp  UpmixProcessorTest.cpp  WavHrirParserTest.cpp
